# Adative-TSC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmd_log.txt  data_log.txt  main.cpp  motor_tau_log.txt
sim/: CMakeLists.txt  main.cpp  state_vis.cpp
sim/include/: PeriodicTask.cpp  PeriodicTask.h
src/asserts/: CMakeLists.txt  package.xml
src/asserts/a1/: a1.urdf  a1.xml  a1_0.urdf  a1_0.xml  config.yaml
src/asserts/aliengo/: aliengo.urdf  aliengo.xml  config.yaml
src/asserts/biped/: biped.urdf  biped.xml  config.yaml
src/asserts/include/asserts/gait/: MotionPhaseDefinition.h
src/asserts/include/asserts/trajectory/: ReferenceBuffer.h
src/asserts/include/gait/: ModeSchedule.h
src/asserts/include/trajectory/: TrajectoriesArray.h
src/asserts/p1/: PF_A.urdf  PF_A.xml  config.yaml  p1.urdf  p1.xml
src/asserts/src/: ModeSchedule.cc  ReferenceBuffer.cc  TrajectoriesArray.cc
src/hardware/A1/: CMakeLists.txt  package.xml
src/hardware/A1/include/unitree_hw/: UnitreeHW.h
src/hardware/A1/include/unitree_legged_sdk/: unitree_legged_sdk.h
src/hardware/A1/launch/: a1_launch.py
src/hardware/A1/src/: UnitreeHW.cc  unitree_hw_node.cc
src/mros/: CMakeLists.txt  README.md  package.xml
src/mros/cmake/: mros.cmake
src/mros/include/mros/: macros.h  mros.h
src/mros/include/mros/controller_msgs/: IMUData.h  RobotCmdPointFoot.h  RobotStatePointFoot.h
src/mros/include/mros/diagnostic_msgs/: DiagnosticValue.h
src/mros/include/mros/json/: elements.h  elements.inl  reader.h  reader.inl  visitor.h  writer.h  writer.inl
src/mros/include/mros/mros_msgs/: GetDiscoveryInfo.h  Log.h  TopicInfo.h  TopicStatistics.h
src/mros/include/mros/os/: common.h  duration.h  log.h  msg.h  node_handle_base.h  publisher.h  rate.h  service_client.h  service_server.h  signals.h  subscriber.h  threadpool.h  time.h  transport.h
src/mros/include/mros/std_msgs/: Bool.h  Byte.h  ByteArray.h  ByteMultiArray.h  Char.h  ColorRGBA.h  Duration.h  Empty.h  Float32.h  Float32Array.h  Float32MultiArray.h  Float64.h  Float64Array.h  Float64MultiArray.h  Header.h  Int16.h  Int16Array.h  Int16MultiArray.h  Int32.h  Int32Array.h  Int32MultiArray.h  Int64.h  Int64Array.h  Int64MultiArray.h  Int8.h  Int8Array.h  Int8MultiArray.h  MultiArrayDimension.h  MultiArrayLayout.h  String.h  Time.h  UInt16.h  UInt16Array.h  UInt16MultiArray.h  UInt32.h  UInt32Array.h  UInt32MultiArray.h  UInt64.h  UInt64Array.h  UInt64MultiArray.h  (+3 more)
src/mros/include/mros/std_srvs/: Empty.h  SetBool.h  Trigger.h
src/sim/: CMakeLists.txt  package.xml
src/sim/include/sim/: SimPublisher.h
src/sim/launch/: a1_launch .py  sim_launch.py
src/sim/src/: sim.cc
src/sim/src/sim/: SimPublisher.cc
src/third_parties/less/: CMakeLists.txt  package.xml
src/third_parties/less/config/: template.yaml
src/third_parties/less/include/less/: AtscQuadruped.h  FrictionCone.h  MaintainContactTask.h  NewtonEulerEquation.h  SE3Task.h  Task.h  TorqueLimits.h
src/third_parties/less/src/: AtscQuadruped.cc  FrictionCone.cc  MaintainContactTask.cc  NewtonEulerEquation.cc  SE3Task.cc  Task.cc  TorqueLimits.cc
src/third_parties/ocs2/ocs2_application/ocs2_legged_robot_ros/: CMakeLists.txt  package.xml
src/third_parties/ocs2/ocs2_application/ocs2_legged_robot_ros/launch/: legged_robot_ddp.launch  legged_robot_ddp.launch.py  legged_robot_dummy.launch.py  legged_robot_gait.launch.py  legged_robot_ipm.launch  legged_robot_ipm.launch.py  legged_robot_sqp.launch  legged_robot_sqp.launch.py  legged_robot_sqp_aliengo.launch.py  multiplot.launch
src/third_parties/ocs2/ocs2_application/ocs2_legged_robot_ros/rviz/: legged_robot.rviz
src/third_parties/ocs2/ocs2_application/ocs2_legged_robot_ros/src/: LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotPoseCommandNode.cpp  LeggedRobotSqpMpcNode.cpp
src/third_parties/ocs2/ocs2_core/: CMakeLists.txt  package.xml
src/third_parties/ocs2/ocs2_core/cmake/: ocs2_cxx_flags.cmake
src/third_parties/ocs2/ocs2_core/src/control/: LinearController.cpp
src/third_parties/ocs2/ocs2_core/src/cost/: StateInputCostCppAd.cpp
src/third_parties/ocs2/ocs2_core/src/integration/: Integrator.cpp
src/third_parties/ocs2/ocs2_legged_robot/: package.xml
src/third_parties/ocs2/ocs2_legged_robot/config/command/: gait.info  (+2 more)
src/third_parties/ocs2/ocs2_legged_robot/src/: MRT_ROS_Robot_Loop.cpp
src/third_parties/ocs2/ocs2_legged_robot_ros/: CMakeLists.txt  package.xml
src/third_parties/ocs2/ocs2_legged_robot_ros/launch/: legged_robot_dummy.launch.py  legged_robot_gait.launch.py  legged_robot_sqp_debug.launch.py  legged_robot_sqp_solver.launch.py
src/third_parties/ocs2/ocs2_legged_robot_ros/rviz/: legged_robot.rviz
src/third_parties/ocs2/ocs2_legged_robot_ros/src/: LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotPoseCommandNode.cpp  LeggedRobotSqpMpcNode.cpp
src/third_parties/ocs2/ocs2_msgs/: CMakeLists.txt  package.xml
src/third_parties/ocs2/ocs2_msgs/msg/: ActuatorCmds.msg  MpcFlattenedController.msg  MpcTargetTrajectories.msg
src/third_parties/ocs2/ocs2_msgs/srv/: Reset.srv  SimReset.srv
src/third_parties/ocs2/ocs2_pinocchio/ocs2_pinocchio_interface/: CMakeLists.txt  package.xml
src/third_parties/ocs2/ocs2_pinocchio/ocs2_self_collision_visualization/: CMakeLists.txt  package.xml
src/third_parties/ocs2/ocs2_robotic_tools/: CMakeLists.txt  package.xml
src/third_parties/ocs2/ocs2_ros_interfaces/: CMakeLists.txt  package.xml
src/third_parties/ocs2/ocs2_sqp/ocs2_sqp/: CMakeLists.txt  package.xml
src/third_parties/solver/: CMakeLists.txt  package.xml
src/third_parties/solver/include/qpsolver/: QpSolver.h
src/third_parties/solver/src/: QpSolver.cc
src/third_parties/solver/test/: test.cc
src/visualization/: CMakeLists.txt  package.xml
src/visualization/config/: config.rviz
src/visualization/include/visualization/: VisualizationNode.h
src/visualization/launch/: a1_vis_launch.py  p1_vis_launch.py
src/visualization/src/: VisualizationNode.cc  main.cc
test/: CMakeLists.txt  DownloadProject.cmake  TestData.mat  data.mat  readMat.py  test.cpp
(+446 files in other folders)
